# tron-ares-dotfiles

./: .gitignore  Cargo.toml  README.md  tron.toml
alacritty/: alacritty.toml
completions/: mcp.nu  mcp.ps1  tron.nu  tron.ps1
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs
crates/tron/: Cargo.toml
crates/tron/src/: main.rs
fastfetch/: config.jsonc  winfetch.json
git/: .gitconfig
helix/: config.toml  languages.toml
mcp/: .env.example  mcp-gen-config.ps1  mcp-run.cmd  mcp-run.ps1  servers.json
nushell/: config.nu  env.nu
opencode/: opencode.json
powershell/: Microsoft.PowerShell_profile.ps1
ripgrep/: .ripgreprc
spotify-player/: app.toml
starship/: starship-nu.toml  starship-pwsh.toml
wezterm/: .wezterm.lua
zed/: settings.json
