[package]
name = "mcp"
description = "MCP (Model Context Protocol) server manager CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "mcp"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
dirs.workspace = true
colored.workspace = true
tabled.workspace = true
dotenvy = "0.15"
